--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Knthcame_MyHealthKMP
 sonar.organization=knthcame
+sonar.host.url=https://sonarcloud.io
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=MyHealthKMP
