--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,25 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  sonarcloud:
-    name: SonarQube Cloud
+  test:
+    name: Test & Analyze code
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Lint & test Kotlin code
+        working-directory: ./src
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 35
+          script: ./gradlew clean 
+            testReleaseUnitTest
+            connectedAndroidTest
+            iosSimulatorArm64Test 
+            lintRelease
+            --build-cache --parallel --continue
 
       - name: Install sonar cli
         uses: Warchant/setup-sonar-scanner@v8
