--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,10 @@
 sonar.projectKey=Knthcame_MyHealthKMP
 sonar.organization=knthcame
 sonar.host.url=https://sonarcloud.io
-
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=MyHealthKMP
 sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# Sources
 sonar.sources=src/
 sonar.exclusions=\
   src/**/commonTest/,\
@@ -19,7 +17,12 @@ sonar.test.inclusions=\
   src/**/androidUnitTest/,\
   src/**/androidInstrumentedTest/,\
   src/**/iosTest/
-
+# Linters
+sonar.androidLint.reportPaths=src/composeApp/build/reports/lint-results-release.xml
+# Test reports
+sonar.junit.reportPaths=src/composeApp/build/test-results/testReleaseUnitTest/,\
+  src/composeApp/build/test-results/iosSimulatorArm64Test/,\
+  src/composeApp/build/outputs/androidTest-results/connected/debug/,
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 sonar.verbose=true
