--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,36 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Lint & test Kotlin code
+        script: ./gradlew clean
+          testReleaseUnitTest
+          iosSimulatorArm64Test
+          desktopTest
+          lintRelease
+          --build-cache --parallel --continue
+
+      - name: Install sonar cli
+        uses: Warchant/setup-sonar-scanner@v8
+
+      - name: SonarQube Cloud Scan
+        run: sonar-scanner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  testAndroidInstrumented:
+    name: Run Android instrumented tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -35,21 +65,7 @@ jobs:
         with:
           api-level: 35
           working-directory: ./src
-          script: ./gradlew clean 
-            testReleaseUnitTest
-            connectedAndroidTest
-            iosSimulatorArm64Test 
-            lintRelease
-            --build-cache --parallel --continue
-
-      - name: Install sonar cli
-        uses: Warchant/setup-sonar-scanner@v8
-
-      - name: SonarQube Cloud Scan
-        run: sonar-scanner
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          script: ./gradlew clean connectedAndroidTest
 
   buildAndroid:
     name: Build Android app
