--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Lint & test Kotlin code
-        script: ./gradlew clean
+        run: ./gradlew clean
           testReleaseUnitTest
           iosSimulatorArm64Test
           desktopTest
