--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Lint & test Kotlin code
+        working-directory: ./src
         run: ./gradlew clean
           testReleaseUnitTest
           iosSimulatorArm64Test
@@ -63,7 +64,7 @@ jobs:
       - name: Lint & test Kotlin code
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 35
+          api-level: 34
           working-directory: ./src
           script: ./gradlew clean connectedAndroidTest
 
