--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,14 +46,6 @@ jobs:
     name: Run Android instrumented tests
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
 
       - name: Enable KVM
         run: |
@@ -61,7 +53,7 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      - name: Lint & test Kotlin code
+      - name: Run Android instrumented tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 34
@@ -73,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checking out branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Java
         uses: actions/setup-java@v4
