--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 34
+          arch: x86_64
           working-directory: ./src
           script: ./gradlew clean connectedAndroidTest
 
