--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           api-level: 34
           arch: x86_64
-          working-directory: ./src
+          working-directory: src/
           script: ./gradlew clean connectedAndroidTest
 
   buildAndroid:
