Specify full path for sources sonar config and emulator working directory.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,16 +7,16 @@ sonar.projectVersion=1.0
 # Sources
 sonar.sources=src/
 sonar.exclusions=\
-  src/**/commonTest/,\
-  src/**/androidUnitTest/,\
-  src/**/androidInstrumentedTest/,\
+  src/**/commonTest/**/*,\
+  src/**/androidUnitTest/**/*,\
+  src/**/androidInstrumentedTest/**/*,\
   src/**/iosTest/**/*
 sonar.tests=src/
 sonar.test.inclusions=\
-  src/**/commonTest/,\
-  src/**/androidUnitTest/,\
-  src/**/androidInstrumentedTest/,\
-  src/**/iosTest/
+  src/**/commonTest/**/*,\
+  src/**/androidUnitTest/**/*,\
+  src/**/androidInstrumentedTest/**/*,\
+  src/**/iosTest/**/*
 # Linters
 sonar.androidLint.reportPaths=src/composeApp/build/reports/lint-results-release.xml
 # Test reports
