--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Lint & test Kotlin code
-        working-directory: .src/
+        working-directory: ./src
         run: ./gradlew clean
           testReleaseUnitTest
           iosSimulatorArm64Test
@@ -58,7 +58,7 @@ jobs:
         with:
           api-level: 34
           arch: x86_64
-          working-directory: ${{ github.workspace }}/src/
+          working-directory: ${{ github.workspace }}/src
           script: ./gradlew clean connectedAndroidTest
 
   buildAndroid:
