--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,8 @@ jobs:
     name: Run Android instrumented tests
     runs-on: ubuntu-latest
     steps:
+      - name: Checking out branch
+        uses: actions/checkout@v4
 
       - name: Enable KVM
         run: |
@@ -58,7 +60,7 @@ jobs:
         with:
           api-level: 34
           arch: x86_64
-          working-directory: ${{ github.workspace }}/src
+          working-directory: ./src
           script: ./gradlew clean connectedAndroidTest
 
   buildAndroid:
