--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      - name: Run Android instrumented tests
+      - name: Lint & test Kotlin code
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 34
