Added sample swift tests. Implemented executing Xcode tests with code coverage, and integrate the results with sonarqube.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,13 +16,30 @@ sonar.test.inclusions=\
   src/**/commonTest/**/*,\
   src/**/androidUnitTest/**/*,\
   src/**/androidInstrumentedTest/**/*,\
-  src/**/iosTest/**/*
+  src/**/iosTest/**/*,\
+  src/iosApp/iosAppTests/**/*
 # Linters
 sonar.androidLint.reportPaths=src/composeApp/build/reports/lint-results-release.xml
 # Test reports
 sonar.junit.reportPaths=src/composeApp/build/test-results/testReleaseUnitTest/,\
   src/composeApp/build/test-results/iosSimulatorArm64Test/,\
-  src/composeApp/build/outputs/androidTest-results/connected/debug/,
+  src/composeApp/build/outputs/androidTest-results/connected/debug/,\
+  src/iosApp/build/reports/
+# Coverage
+sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
+# TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
+sonar.coverage.exclusions=\
+  src/iosApp/iosAppTests/**/*,\
+  src/**/commonTest/**/*,\
+  src/**/androidUnitTest/**/*,\
+  src/**/androidInstrumentedTest/**/*,\
+  src/**/iosTest/**/*,\
+  src/**/iosMain/**/*,\
+  src/**/composeResources/**/*,\
+  src/**/androidMain/**/preview/**/*,\
+  src/**/*Screen*,\
+  src/**/*Composable*,\
+  src/**/Fake*
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 sonar.verbose=true
