--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   test:
@@ -39,17 +39,62 @@ jobs:
           lintRelease
           --build-cache --parallel --continue
 
-      - name: Publish Test Results
+      - name: Test Swift code
+        if: always()
+        run: set -eo pipefail && xcodebuild clean test
+          -scheme iosApp
+          -sdk iphonesimulator
+          -destination "platform=iOS simulator,name=iPhone 16"
+          -configuration Release
+          -project src/iosApp/iosApp.xcodeproj
+          -resultBundlePath src/iosApp/build/reports/iosApp.xcresult
+          -enableCodeCoverage YES
+          CODE_SIGNING_ALLOWED=NO | xcbeautify
+          --report junit
+          --report-path src/iosApp/build/reports/
+          --junit-report-filename TEST-XcodeTestResults.xml
+
+      # Converts XCode's xcresult file to a code coverage format that sonarqube understands,
+      # according to the official guide/example:
+      # https://github.com/SonarSource/sonar-scanning-examples/tree/master/swift-coverage
+      - name: 'Convert code coverage result format'
+        run: bash src/iosApp/xccov-to-sonarqube-generic.sh src/iosApp/build/reports/iosApp.xcresult > src/iosApp/build/reports/Swift-Coverage.xml
+        if: always()
+
+      - name: Publish Kotlin test results
         uses: EnricoMi/publish-unit-test-result-action/macos@v2
         if: always()
         with:
           files: '**/test-results/**/*.xml'
           check_name: 'Kotlin test results'
 
+      - name: Archive Kotlin test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: kotlin-unit-test-results
+          path: '**/test-results/**/*.xml'
+
+      - name: Publish Swift test results
+        uses: EnricoMi/publish-unit-test-result-action/macos@v2
+        if: always()
+        with:
+          files: '**/iosApp/build/reports/**/*.xml'
+          check_name: 'Swift test results'
+
+      - name: Archive Swift test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: swift-test-results
+          path: 'src/iosApp/build/reports/'
+
       - name: Install sonar cli
         uses: Warchant/setup-sonar-scanner@v8
+        if: always()
 
       - name: SonarQube Cloud Scan
+        if: always()
         run: sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
@@ -88,6 +133,12 @@ jobs:
         with:
           files: '**/androidTest-results/**/*.xml'
           check_name: 'Android instrumented test results'
+
+      - name: Archive test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-instrumented-test-results
+          path: '**/androidTest-results/**/*.xml'
 
   buildAndroid:
     name: Build Android app
