Adde Kover plugin for Kotlin code coverage

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ compose-multiplatform = "1.7.0"
 kotlin = "2.0.21"
 kotlinx-coroutines = "1.9.0"
 uiTestJunit4Android = "1.7.5"
+kover = "0.8.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -25,3 +26,4 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
