--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      # koverXmlReportRelease executes testReleaseUnitTest internally.
       - name: Lint & test Kotlin code
         working-directory: ./src
         run: ./gradlew clean
-          testReleaseUnitTest
+          koverXmlReportRelease
           iosSimulatorArm64Test
           desktopTest
           lintRelease
