--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,6 +27,7 @@ sonar.junit.reportPaths=src/composeApp/build/test-results/testReleaseUnitTest/,\
   src/iosApp/build/reports/
 # Coverage
 sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
+sonar.coverage.jacoco.xmlReportPaths=src/composeApp/build/reports/kover/reportRelease.xml
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
   src/iosApp/iosAppTests/**/*,\
