--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,9 @@ jobs:
           lintRelease
           --build-cache --parallel --continue
 
+      - name: Select Xcode 16.1
+        run: sudo xcode-select -s /Applications/Xcode_16.1.app
+
       - name: Test Swift code
         if: always()
         run: set -eo pipefail && xcodebuild clean test
@@ -80,7 +83,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action/macos@v2
         if: always()
         with:
-          files: '**/iosApp/build/reports/**/*.xml'
+          files: '**/iosApp/build/reports/**/TEST-*.xml'
           check_name: 'Swift test results'
 
       - name: Archive Swift test results
