Added missing paths in the sonar configuration for desktop tests. Removed path for "android instrumented tests" report since it's done in a separate job.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,20 +10,23 @@ sonar.exclusions=\
   src/**/commonTest/**/*,\
   src/**/androidUnitTest/**/*,\
   src/**/androidInstrumentedTest/**/*,\
-  src/**/iosTest/**/*
+  src/**/iosTest/**/*,\
+  src/**/desktopTest/**/*,\
+  src/iosApp/iosAppTests/**/*
 sonar.tests=src/
 sonar.test.inclusions=\
   src/**/commonTest/**/*,\
   src/**/androidUnitTest/**/*,\
   src/**/androidInstrumentedTest/**/*,\
   src/**/iosTest/**/*,\
+  src/**/desktopTest/**/*,\
   src/iosApp/iosAppTests/**/*
 # Linters
 sonar.androidLint.reportPaths=src/composeApp/build/reports/lint-results-release.xml
 # Test reports
 sonar.junit.reportPaths=src/composeApp/build/test-results/testReleaseUnitTest/,\
   src/composeApp/build/test-results/iosSimulatorArm64Test/,\
-  src/composeApp/build/outputs/androidTest-results/connected/debug/,\
+  src/composeApp/build/test-results/desktopTest/,\
   src/iosApp/build/reports/
 # Coverage
 sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
