Added unit tests for DashboardViewmodel and DefaultDashboardRepository. Added mokkery and turbine libraries to implement them.

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -10,10 +10,12 @@ kotlin = "2.1.0"
 kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.7.3"
 kotlinx-coroutines = "1.9.0"
+turbine = "1.2.0"
 uiTestJunit4Android = "1.7.5"
 kover = "0.8.1"
 koin = "4.0.0"
 skie = "0.9.5"
+mokkery = "2.6.0"
 navigationCompose = "2.8.0-alpha10"
 
 [libraries]
@@ -25,6 +27,7 @@ jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:nav
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "uiTestJunit4Android" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
@@ -33,6 +36,7 @@ koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-view
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -43,3 +47,4 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 kotlinXSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 skie = { id = "co.touchlab.skie", version.ref = "skie" }
+mokkery = { id = "dev.mokkery", version.ref = "mokkery" }
