Added -X switch to enable full debug logging in the sonar scan step.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,7 +99,7 @@ jobs:
 
       - name: SonarQube Cloud Scan
         if: always()
-        run: sonar-scanner
+        run: sonar-scanner -X
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
