Disabled Swift tests execution
Comment out the steps to execute the Swift tests in the github workflow. Also commented out the corresponding test and code coverage results from the sonar configuration.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,10 +26,10 @@ sonar.androidLint.reportPaths=src/composeApp/build/reports/lint-results-release.
 # Test reports
 sonar.junit.reportPaths=src/composeApp/build/test-results/testReleaseUnitTest/,\
   src/composeApp/build/test-results/iosSimulatorArm64Test/,\
-  src/composeApp/build/test-results/desktopTest/,\
-  src/iosApp/build/reports/
+  src/composeApp/build/test-results/desktopTest/
+#  src/iosApp/build/reports/
 # Coverage
-sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
+#sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=src/composeApp/build/reports/kover/reportRelease.xml
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
