Added cove coverage exclusions
Added exclusions related to UI configuration and navigation that can't be tested with the current Kover capabilities.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -43,6 +43,9 @@ sonar.coverage.exclusions=\
   src/**/androidMain/**/preview/**/*,\
   src/**/*Screen*,\
   src/**/*Composable*,\
+  src/**/ui/theme/**/*,\
+  src/**/Koin*,\
+  src/**/*NavHost*,\
   src/**/Fake*
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
