--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -1,5 +1,8 @@
 [versions]
 agp = "9.0.0"
+android-compileSdk = "35"
+android-minSdk = "26"
+android-targetSdk = "35"
 androidx-activityCompose = "1.10.1"
 androidx-lifecycle = "2.9.6"
 compose-multiplatform = "1.10.0"
@@ -10,7 +13,7 @@ kotlinx-coroutines = "1.10.2"
 material3 = "1.9.0"
 turbine = "1.2.1"
 uiTestJunit4Android = "1.7.8"
-kover = "0.9.1"
+kover = "0.9.6"
 koin = "4.1.1"
 skie = "0.10.10"
 mokkery = "3.1.1"
@@ -45,8 +48,9 @@ turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
-androidLibrary = { id = "com.android.library", version.ref = "agp" }
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
+kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinXSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
