Added tests for new viewModels

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -46,6 +46,7 @@ sonar.coverage.exclusions=\
   src/**/ui/theme/**/*,\
   src/**/Koin*,\
   src/**/*NavHost*,\
+  src/**/*NavGraph*,\
   src/**/Fake*
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
