Added some more tests and exclusions to increase coverage.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -41,6 +41,7 @@ sonar.coverage.exclusions=\
   src/**/iosMain/**/*,\
   src/**/composeResources/**/*,\
   src/**/androidMain/**/preview/**/*,\
+  Src/**/*Database*.kt,\
   src/**/*Screen*,\
   src/**/*Composable*,\
   src/**/ui/theme/**/*,\
