Added ktlint and detekt checks.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,13 +23,15 @@ sonar.test.inclusions=\
   src/iosApp/iosAppTests/**/*
 # Linters
 sonar.androidLint.reportPaths=src/androidApp/build/reports/lint-results-release.xml
+sonar.kotlin.detekt.reportPaths=src/**/build/reports/detekt/detekt.xml
+sonar.kotlin.ktlint.reportPaths=src/**/reports/ktlint/**/*.xml
 # Test reports
 sonar.junit.reportPaths=src/shared/build/test-results/testAndroidHostTest/,\
   src/shared/build/test-results/iosSimulatorArm64Test/,\
   src/shared/build/test-results/desktopTest/
 #  src/iosApp/build/reports/
 # Coverage
-#sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
+sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=src/shared/build/reports/kover/report.xml
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
