--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ koin = "4.1.1"
 skie = "0.10.10"
 mokkery = "3.1.1"
 navigationCompose = "2.9.2"
+ktlint = "14.0.1"
+detekt = "2.0.0-alpha.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -57,3 +59,5 @@ kotlinXSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 skie = { id = "co.touchlab.skie", version.ref = "skie" }
 mokkery = { id = "dev.mokkery", version.ref = "mokkery" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+detekt = { id = "dev.detekt", version.ref = "detekt" }
