--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,8 +23,11 @@ sonar.test.inclusions=\
   src/iosApp/iosAppTests/**/*
 # Linters
 sonar.androidLint.reportPaths=src/androidApp/build/reports/lint-results-release.xml
-sonar.kotlin.detekt.reportPaths=src/**/build/reports/detekt/detekt.xml
-sonar.kotlin.ktlint.reportPaths=src/**/reports/ktlint/**/*.xml
+sonar.kotlin.detekt.reportPaths=src/shared/build/reports/detekt/detekt.xml
+sonar.kotlin.ktlint.reportPaths=\
+  src/shared/reports/ktlint/,\
+  src/androidApp/reports/ktlint/,\
+  src/desktopApp/reports/ktlint/
 # Test reports
 sonar.junit.reportPaths=src/shared/build/test-results/testAndroidHostTest/,\
   src/shared/build/test-results/iosSimulatorArm64Test/,\
