Split swift tests into separate job. Implemented setting the ktlint report paths dynamically.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,42 @@ jobs:
           lintRelease
           --build-cache --parallel --continue
 
+      - name: Publish Kotlin test results
+        uses: EnricoMi/publish-unit-test-result-action/macos@v2
+        if: always()
+        with:
+          files: '**/test-results/**/*.xml'
+          check_name: 'Kotlin test results'
+
+      - name: Archive Kotlin test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: kotlin-unit-test-results
+          path: '**/test-results/**/*.xml'
+
+      - name: Install sonar cli
+        uses: Warchant/setup-sonar-scanner@v8
+        if: always()
+
+      - name: Get ktlint reports file paths
+        id: ktlintPath
+        run: echo "ktlintReportPaths=$(find src/**/build/reports/ktlint/**/*.xml)" >> $GITHUB_OUTPUT
+
+      - name: SonarQube Cloud Scan
+        if: always()
+        run: sonar-scanner -X -Dsonar.kotlin.ktlint.reportPaths=${{ steps.ktlintPath.outputs.ktlintReportPaths }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  swiftTests:
+    name: Run swift tests
+    runs-on: macos-latest
+    steps:
+      - name: Checking out branch
+        uses: actions/checkout@v4
+
       - name: Select Xcode 26.2
         run: sudo xcode-select -s /Applications/Xcode_26.2.app
 
@@ -60,26 +96,12 @@ jobs:
           --report-path src/iosApp/build/reports/
           --junit-report-filename TEST-XcodeTestResults.xml
 
-      # Converts XCode's xcresult file to a code coverage format that sonarqube understands,
-      # according to the official guide/example:
-      # https://github.com/SonarSource/sonar-scanning-examples/tree/master/swift-coverage
-      - name: 'Convert code coverage result format'
-        run: bash src/iosApp/xccov-to-sonarqube-generic.sh src/iosApp/build/reports/iosApp.xcresult > src/iosApp/build/reports/Swift-Coverage.xml
-        if: always()
-
-      - name: Publish Kotlin test results
-        uses: EnricoMi/publish-unit-test-result-action/macos@v2
-        if: always()
-        with:
-          files: '**/test-results/**/*.xml'
-          check_name: 'Kotlin test results'
-
-      - name: Archive Kotlin test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: kotlin-unit-test-results
-          path: '**/test-results/**/*.xml'
+#      # Converts XCode's xcresult file to a code coverage format that sonarqube understands,
+#      # according to the official guide/example:
+#      # https://github.com/SonarSource/sonar-scanning-examples/tree/master/swift-coverage
+#      - name: 'Convert code coverage result format'
+#        run: bash src/iosApp/xccov-to-sonarqube-generic.sh src/iosApp/build/reports/iosApp.xcresult > src/iosApp/build/reports/Swift-Coverage.xml
+#        if: always()
 
       - name: Publish Swift test results
         uses: EnricoMi/publish-unit-test-result-action/macos@v2
@@ -94,17 +116,6 @@ jobs:
         with:
           name: swift-test-results
           path: 'src/iosApp/build/reports/'
-
-      - name: Install sonar cli
-        uses: Warchant/setup-sonar-scanner@v8
-        if: always()
-
-      - name: SonarQube Cloud Scan
-        if: always()
-        run: sonar-scanner -X
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   testAndroidInstrumented:
     name: Run Android instrumented tests
