--- a/src/config/detekt.yml
+++ b/src/config/detekt.yml
@@ -330,7 +330,7 @@ naming:
   FunctionNaming:
     active: true
     aliases: ['FunctionName']
-    excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/desktopTest/**', '**/desktopTest/**', '**/androidHostTest/**', '**/androidTest/**', '**/jsTest/**', '**/iosTest/**']
+    excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/desktopTest/**', '**/androidHostTest/**', '**/androidTest/**', '**/jsTest/**', '**/iosTest/**']
     functionPattern: '[a-z][a-zA-Z0-9]*'
     excludeClassPattern: '$^'
     ignoreAnnotated: ['Composable']
