--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,17 +24,14 @@ sonar.test.inclusions=\
 # Linters
 sonar.androidLint.reportPaths=src/androidApp/build/reports/lint-results-release.xml
 sonar.kotlin.detekt.reportPaths=src/shared/build/reports/detekt/detekt.xml
-sonar.kotlin.ktlint.reportPaths=\
-  src/shared/reports/ktlint/,\
-  src/androidApp/reports/ktlint/,\
-  src/desktopApp/reports/ktlint/
+#ktlint reports set via cli in build.yaml
 # Test reports
 sonar.junit.reportPaths=src/shared/build/test-results/testAndroidHostTest/,\
   src/shared/build/test-results/iosSimulatorArm64Test/,\
   src/shared/build/test-results/desktopTest/
 #  src/iosApp/build/reports/
 # Coverage
-sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
+#sonar.coverageReportPaths=src/iosApp/build/reports/Swift-Coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=src/shared/build/reports/kover/report.xml
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
