Updated coverage exclusion for iOS

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,12 +35,11 @@ sonar.junit.reportPaths=shared/build/test-results/testAndroidHostTest/,\
 sonar.coverage.jacoco.xmlReportPaths=shared/build/reports/kover/report.xml
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
-  iosApp/iosAppTests/**/*,\
+  iosApp/**/*,\
   **/commonTest/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
   **/iosTest/**/*,\
-  **/iosMain/**/*,\
   **/composeResources/**/*,\
   **/androidMain/**/preview/**/*,\
   **/*Screen*,\
