Re-added iosMain to coverage exclusions since it's still not supported.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -39,6 +39,7 @@ sonar.coverage.exclusions=\
   **/commonTest/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
+  **/iosMain/**/*,\
   **/iosTest/**/*,\
   **/composeResources/**/*,\
   **/androidMain/**/preview/**/*,\
