--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
         run: set -eo pipefail && xcodebuild clean test
           -scheme iosApp
           -sdk iphonesimulator
-          -destination "platform=iOS Simulator"
+          -destination "platform=iOS Simulator,name=iPhone 17"
           -configuration Release
           -project iosApp/iosApp.xcodeproj
           -resultBundlePath iosApp/build/reports/iosApp.xcresult
