--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,6 +25,7 @@ sonar.test.inclusions=\
 sonar.androidLint.reportPaths=androidApp/build/reports/lint-results-release.xml
 sonar.kotlin.detekt.reportPaths=shared/build/reports/detekt/detekt.xml
 #ktlint reports set via cli in build.yaml
+sonar.swift.swiftLint.reportPaths=swiftlint.json
 # Test reports
 sonar.junit.reportPaths=shared/build/test-results/testAndroidHostTest/,\
   shared/build/test-results/iosSimulatorArm64Test/,\
