Force running "kotlin lint & test" step when swift lint fails.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
 
       # koverXmlReportRelease executes testReleaseUnitTest internally.
       - name: Lint & test Kotlin code
+        if: always()
         run: ./gradlew clean
           ktlintCheck
           detekt
