--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,8 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.exclusions=\
   **/commonTest/**/*,\
+  androidApp/**/*,\
+  desktopApp/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
   **/iosTest/**/*,\
