--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,6 @@ sonar.sources=.
 sonar.exclusions=\
   **/commonTest/**/*,\
   androidApp/**/*,\
-  desktopApp/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
   **/iosTest/**/*,\
@@ -34,7 +33,10 @@ sonar.junit.reportPaths=shared/build/test-results/testAndroidHostTest/,\
 #  iosApp/build/reports/
 # Coverage
 #sonar.coverageReportPaths=iosApp/build/reports/Swift-Coverage.xml
-sonar.coverage.jacoco.xmlReportPaths=shared/build/reports/kover/report.xml
+sonar.coverage.jacoco.xmlReportPaths=\
+    shared/build/reports/kover/report.xml,\
+    androidApp/build/reports/kover/report.xml,\
+    desktopApp/build/reports/kover/report.xml,\
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
   iosApp/**/*,\
