Formatting. Excluded main & window classes from coverage.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.sources=.
 sonar.exclusions=\
   **/commonTest/**/*,\
   androidApp/**/*,\
+  desktopApp/src/main/kotlin/com/knthcame/myhealthkmp/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
   **/iosTest/**/*,\
