--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sources=.
 sonar.exclusions=\
   **/commonTest/**/*,\
   androidApp/**/*,\
-  desktopApp/src/main/kotlin/com/knthcame/myhealthkmp/*,\
+  desktopApp/src/main/kotlin/com/knthcame/myhealthkmp/Main.kt,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
   **/iosTest/**/*,\
