Added "test" modules to coverage exclusions.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectVersion=1.0
 # Sources
 sonar.sources=.
 sonar.exclusions=\
+  **/test/**/*,\
   **/commonTest/**/*,\
   androidApp/**/*,\
   desktopApp/src/main/kotlin/com/knthcame/myhealthkmp/Main.kt,\
@@ -17,6 +18,7 @@ sonar.exclusions=\
   iosApp/iosAppTests/**/*
 sonar.tests=.
 sonar.test.inclusions=\
+  **/test/**/*,\
   **/commonTest/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
