Desktop koin tests (#60)
Added test for desktop to ensure that koin is properly configured.
Added ui test for desktop to ensure that app launches correctly.
Added more android instrumented tests.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,6 +15,7 @@ sonar.exclusions=\
   iosApp/iosAppTests/**/*
 sonar.tests=.
 sonar.test.inclusions=\
+  **/test/**/*,\
   **/commonTest/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
@@ -32,10 +33,16 @@ sonar.junit.reportPaths=shared/build/test-results/testAndroidHostTest/,\
 #  iosApp/build/reports/
 # Coverage
 #sonar.coverageReportPaths=iosApp/build/reports/Swift-Coverage.xml
-sonar.coverage.jacoco.xmlReportPaths=shared/build/reports/kover/report.xml
+sonar.coverage.jacoco.xmlReportPaths=\
+    shared/build/reports/kover/report.xml,\
+    androidApp/build/reports/kover/report.xml,\
+    desktopApp/build/reports/kover/report.xml,\
 # TODO: Remove Kotlin/native targets from coverage exclusions once Kover supports them.
 sonar.coverage.exclusions=\
+  androidApp/**/*,\
+  desktopApp/src/main/kotlin/com/knthcame/myhealthkmp/Main.kt,\
   iosApp/**/*,\
+  **/test/**/*,\
   **/commonTest/**/*,\
   **/androidHostTest/**/*,\
   **/androidTest/**/*,\
