Added SwiftLint report to sonar scanner.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,6 +23,7 @@ sonar.test.inclusions=\
   **/desktopTest/**/*,\
   iosApp/iosAppTests/**/*
 # Linters
+sonar.swift.swiftLint.reportPaths=swiftlint.json
 sonar.androidLint.reportPaths=androidApp/build/reports/lint-results-release.xml
 sonar.kotlin.detekt.reportPaths=shared/build/reports/detekt/detekt.xml
 #ktlint reports set via cli in build.yaml
